--- a/relatorio-latex/.gitignore
+++ b/relatorio-latex/.gitignore
@@ -12,7 +12,6 @@
 *.fdb_latexmk
 
 # Arquivos PDF e DVI gerados
-*.pdf
 *.dvi
 
 # Arquivos de backup do editor
@@ -26,3 +25,6 @@
 
 # Diretórios de compilação
 _build/
+
+# relatorio pdf
+relatorio.pdf
